--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
   },
   "workspaces": [
     "aws-distro-opentelemetry-node-autoinstrumentation/",
-    "exporters/aws-distro-opentelemetry-exporter-xray-udp/"
+    "exporters/aws-distro-opentelemetry-exporter-xray-udp/",
+    "z-examples/adot-js-lambda"
   ]
 }
